/* -------------------------------------------------------------------------- */

syntax = "proto2";

package nefit;
option java_package = "nefit.proto";
option java_outer_classname = "NefitProtos";

/* -------------------------------------------------------------------------- */

message MsgAuth {
	required string name = 1;
	required string pass = 2;

	enum ClientType {
        MANUFACTURER = 0;
    	IMPORTER = 1;
    }
    required ClientType ctype = 3;

	enum MsgType {
		LOGIN = 0;
		REGISTER = 1;
	}
	optional MsgType mtype = 4 [default = LOGIN];
}

message MsgAck {
    required bool ok = 1;
    optional string msg = 2;
}

message DisponibilityS {
    required string nameM = 1;
    required string nameP = 2;
    required int32 minimun = 3;
    required int32 maximun = 4;
    required int32 value = 5;
    required int32 period = 6;
}

message DisponibilityN {
    required string nameM = 1;
    required string nameP = 2;
    required int32 minimun = 3;
    required int32 maximun = 4;
    required int32 value = 5;
    required int32 period = 6;
}

message OrderS {
    required string nameM = 1;
    required string nameP = 2;
    required int32 quant = 3;
    required int32 value = 4;
}

message OrderN {
    required string nameM = 1;
    required string nameP = 2;
    required int32 quant = 3;
    required int32 value = 4;
}

message OrderAckS {
    required bool ack = 1;
    optional string msg = 2;
    required string nameI = 3;
}

message OrderAckI {
    required bool ack = 1;
    optional string msg = 2;
}

message SubS {
    repeated string subs = 1;
}

message SubN {
    repeated string subs = 1;
}

message ProductionS {
    required string nameM = 1;
    required string nameP = 2;
    required int32 quant = 3;
    required int32 value = 4;
}

message ProductionM {
    required string nameP = 1;
    required int32 quant = 2;
    required int32 value = 3;
}

message ResultS {
    required bool result = 1;
    required string msg = 2;
    required string nameI = 3;
}

message ResultI {
    required bool result = 1;
    required string msg = 2;
}

message InfoS {
    required string nameM = 1;
    required string nameP = 2;
    required int32 minimun = 3;
    required int32 maximun = 4;
    required int32 value = 5;
    required int32 period = 6;
    required string nameI = 7;
}
message InfoI {
    required string nameM = 1;
    required string nameP = 2;
    required int32 minimun = 3;
    required int32 maximun = 4;
    required int32 value = 5;
    required int32 period = 6;
}


message GetS {
    required string nameI = 1;
}

message GetN {
    required string nameI = 1;
}

message NegotiationsS {
    required string nameI = 1;
    repeated InfoI negotiations = 2;
}

message NegotiationsI {
    repeated InfoI negotiations = 1;
}

message Server {
    oneof msg {
        DisponibilityS m1 = 1;
        OrderS m2 = 2;
        SubS m3 = 3;
        ResultS m4 = 4;
        InfoS m5 = 5;
        ProductionS m6 = 6;
        OrderAckS m7 = 7;
        GetS m8 = 8;
        NegotiationsS m9 = 9;
        MsgAuth m10 = 10;
    }
}

message Importer {
    oneof msg {
        OrderAckI ordack = 1;
        NegotiationsI nego = 2;
        ResultI result = 3;
        InfoI info = 4;
    }
}

message Negotiator {
    oneof msg {
        GetN get = 1;
        SubN sub = 2;
        OrderN order = 3;
        DisponibilityN disp = 4;
    }
}

/* -------------------------------------------------------------------------- */
